Update TimeDurationFormat*() since formatter fixed

The doc comments and tests for TimeDurationFormat*() indicate that
DURATION_WIDTH_NUMERIC doesn't work with durations longer than 24h,
but that no longer seems to be the case. ICU appears to now handle
durations over a day.

This change updates any related comments and adds a test case for the
now-working argument.

Fixed: 675791
Change-Id: I479d432b59a8d0c2f3eab2d876e63e1c35be3f25
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3105298
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Reviewed-by: Jungshik Shin <jshin@chromium.org>
Commit-Queue: Jesse McKenna <jessemckenna@google.com>
Cr-Commit-Position: refs/heads/main@{#915309}